fixed spacing for quiz buttons and footer

--- a/css/main.css
+++ b/css/main.css
@@ -112,7 +112,7 @@ footer {
     width: 100%;
     left: 0;   
     bottom: 0;
-    position: absolute;
+   
 
 }
 
